samples/_failures_safe/1761377531_fe95e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ff9d6c3.c: In function ‘main’:
./samples/SAFE/__tmp_2ff9d6c3.c:154:9: error: expected declaration or statement at end of input
  154 |         return 0;
      |         ^~~~~~
./samples/SAFE/__tmp_2ff9d6c3.c:154:9: error: expected declaration or statement at end of input
